package edu.fiuba.algo3.modelo;

public class Visible implements Visibilidad{

    @Override
    public Danio danioARecibir(Danio danioA) {
        return danioA;
    }


}
