package edu.fiuba.algo3.modelo.unidades.moviles;

import edu.fiuba.algo3.modelo.unidades.Danio;

public interface Visibilidad {

    Danio danioARecibir(Danio danio);
}
